src/objects/LCIS__c.object
<CustomObject>
    <fields>
        <fullName>Closest_Margin__c</fullName>
        <label>Closest Margin</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1 mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1 cm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifiy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Histological_Type__c</fullName>
        <label>Histological Type</label>
        <picklist>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleomorphic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Histology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Histology</label>
        <referenceTo>Histology__c</referenceTo>
        <relationshipLabel>LCIS</relationshipLabel>
        <relationshipName>LCIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCIS__c</fullName>
        <label>LCIS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margins__c</fullName>
        <label>Margins</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Study_Pathology_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On-Study Pathology Form</label>
        <referenceTo>On_Study_Pathology_Form__c</referenceTo>
        <relationshipLabel>LCIS</relationshipLabel>
        <relationshipName>LCIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>LCIS</relationshipLabel>
        <relationshipName>LCIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specify_No__c</fullName>
        <label>Specify No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify_Units__c</fullName>
        <label>Specify Units</label>
        <picklist>
            <controllingField>Closest_Margin__c</controllingField>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_histological_span__c</fullName>
        <label>Total histological span</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_histological_span_measurement_unit__c</fullName>
        <label>Total histological span measurement unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unknown_Not_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown/Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_Lcis_Id__c</fullName>
        <label>pg_Lcis_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>LCIS</label>
    <nameField>
        <displayFormat>LCIS-{000000}</displayFormat>
        <label>LCIS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCIS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>